# borgreport

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-THIRD-PARTY.md  Makefile  README.md  REUSE.toml  about.hbs  about.toml  build.rs  deny.toml  tests.sh
assets/man/: borgreport.1  borgreport.1.adoc  borgreport.html
assets/shell_completions/: _borgreport  _borgreport.ps1  borgreport.bash  borgreport.elv  borgreport.fish
assets/systemd/: borgreport.service  borgreport.timer  borgreport.tmpfile
src/: borg.rs  borg_json.rs  cli.rs  format.rs  main.rs  report.rs  repository.rs  utils.rs
src/borg_json/: info.rs
src/format/: html.rs  metrics.rs  mod.rs  text.rs
src/report/: check.rs  compact.rs  info.rs
tests/: common.rs  report_text.rs  write_files.rs
tests/common/: init.rs  mod.rs
